# fp-lab4

./: README.md  dune  dune-project  fp4.opam  main.ml
_build/: .db  .digest-db  log
_build/default/: fp4.dune-package  fp4.install  main.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.main.eobjs/byte/: dune__exe__Main.cmi  dune__exe__Main.cmti
_build/default/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/.merlin-conf/: exe-main
_build/install/default/lib/fp4/: META  dune-package  opam
