(lang dune 3.16)

(name fp4)

(generate_opam_files true)

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)



(package
 (name fp4)
 (synopsis "A short synopsis")
 (description "A longer description")
 (allow_empty)
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
